examples/csharp/errors/timeout/obj/project.nuget.cache
{
  "version": 2,
  "dgSpecHash": "b2WzWzJPyMeLRt1DiNyaQeaOjyw5IPL4w1m2JgEDUfeUsGLHhbs0rMOkkiyMvS7UNFKJO+FuAKYdIdIO0VorHg==",
  "success": true,
  "projectFilePath": "/Users/liornabat/development/projects/kubemq/clients/kubemq-a2a/examples/csharp/errors/timeout/Timeout.csproj",
  "expectedPackageFiles": [],
  "logs": []
}